Enum protocol {
  local
  activitypub
  nostr
}

Table users {
  id varchar(255) [pk]
  username varchar(255) [not null, default: ""]
  protocol protocol [not null]
  hashed_password varchar(255) [not null, default: ""]
  display_name varchar(255) [not null, default: ""]
  profile text
  icon varchar(255)
  created_at timestamp [default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [default: "CURRENT_TIMESTAMP"]
}

Table ap_user_identifiers {
  user_id varchar(255) [pk, ref: - users.id]
  local_username varchar(255) [not null]
  host varchar(255) [not null]
  public_key text [not null, default: ""]
  private_key text
  created_at timestamp [default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [default: "CURRENT_TIMESTAMP"]
}

Table nostr_user_identifiers {
  user_id varchar(255) [pk, ref: - users.id]
  public_key varchar(255) [not null]
  private_key varchar(255)
  npub varchar(255) [not null]
  nsec varchar(255)
  created_at timestamp [default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [default: "CURRENT_TIMESTAMP"]
}

Table follows {
  id varchar(255) [unique]
  follower_id varchar(255) [pk, ref: > users.id]
  target_id varchar(255) [pk, ref: > users.id]
  is_accepted boolean [not null, default: false]
  created_at timestamp [default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [default: "CURRENT_TIMESTAMP"]
}

Table posts {
  id varchar(255) [pk]
  protocol protocol [not null]
  user_id varchar(255) [ref: > users.id]
  content text [not null]
  created_at timestamp [default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [default: "CURRENT_TIMESTAMP"]
}

Table reactions {
  id varchar(255) [pk]
  type varchar(255) [not null]
  user_id varchar(255) [not null, ref: > users.id]
  post_id varchar(255) [not null, ref: > posts.id]
  created_at timestamp [default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [default: "CURRENT_TIMESTAMP"]
}

Table articles {
  id varchar(255) [pk]
  user_id varchar(255) [not null, ref: > users.id]
  title varchar(255) [not null]
  content text [not null]
  created_at timestamp [default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [default: "CURRENT_TIMESTAMP"]
}

Table article_comments {
  id varchar(255) [pk]
  user_id varchar(255) [not null, ref: > users.id]
  article_id varchar(255) [not null, ref: > articles.id]
  content text [not null]
  created_at timestamp [default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [default: "CURRENT_TIMESTAMP"]
}

Table article_post_relations {
  article_id varchar(255) [pk, ref: - articles.id]
  post_id varchar(255) [pk, ref: - posts.id]
}

Table nostr_relays {
  id varchar(255) [pk]
  url varchar(255) [not null, unique]
  is_enable boolean [not null, default: true]
  created_at timestamp [default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [default: "CURRENT_TIMESTAMP"]
}
